--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,33 +1,27 @@
 name: STM32 Build
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout your repo
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4   # latest checkout
 
-      # Step 2: Install ARM GCC toolchain
-      - name: Install ARM GCC
+      - name: Install ARM GCC Toolchain
         run: |
-          sudo apt update
-          sudo apt install -y gcc-arm-none-eabi binutils-arm-none-eabi
+          sudo apt-get update
+          sudo apt-get install -y gcc-arm-none-eabi make
 
-      # Step 3: Build using Makefile
       - name: Build project
         run: make
 
-      # Step 4: Upload the .bin as artifact
-      - name: Upload firmware
-        uses: actions/upload-artifact@v3
+      - name: Upload firmware artifact
+        uses: actions/upload-artifact@v4
         with:
-          name: firmware-bin
-          path: build/*.bin
+          name: stm32-firmware
+          path: |
+            build/*.bin
+            build/*.elf
