--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
 name: Build STM32 Firmware
 
+permissions:
+  contents: write   # ✅ allow creating releases
+
 on:
   push:
     branches: [ "main" ]
